fixed an undesired layout issue in the projects page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,9 +51,10 @@ body {
 .secondary_container {
   min-height: 70vh;
   max-width: 1200px;
-justify-content: space-evenly;
+  width: 100%;
+  justify-content: space-evenly;
   margin: 0 auto;
-  padding: 0;
+  padding: 1em;
 }
 
 .main__content_container {
@@ -79,7 +80,7 @@ justify-content: space-evenly;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.144);
   border-bottom-left-radius: 15px;
   border-top-right-radius: 15px;
-  margin-top: 1em;
+  margin: 1em ;
 }
 
 .btn {
@@ -166,7 +167,7 @@ justify-content: space-evenly;
 
   .btn {
     padding: 0.7em;
-    font-size: .6rem;
+    font-size: 0.7rem;
   }
 
   .main__content_container {
@@ -174,7 +175,7 @@ justify-content: space-evenly;
     margin: auto;
     min-width: 300px;
     width: 100%;
-    
+
     box-shadow: unset;
     border-bottom-left-radius: unset;
     border-top-right-radius: unset;
